archive/manifests/prom.yaml
apiVersion: v1
kind: Service
metadata:
  name: prom
spec:
  type: ClusterIP
  selector:
    app: prom
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom
  labels:
    app: prom
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prom
  template:
    metadata:
      labels:
        app: prom
    spec:
      serviceAccountName: prom
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: prom
          image: prometheus
          command:
            - prometheus
            - --storage.tsdb.path=/durable
            - --storage.tsdb.retention.time=1d
          volumeMounts:
            - name: storage
              mountPath: /durable
            - name: conf
              mountPath: /prometheus/prometheus.yml
              subPath: prometheus.yml
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /-/ready
              port: 9090
      volumes:
        - name: storage
          hostPath:
            path: /opt/prom
        - name: conf
          configMap:
            name: prom-config

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
      annotations:
        prometheus.io/port: "9100"
        prometheus.io/path: /metrics
        prometheus.io/scrape: "true"
    spec:
      tolerations:
      - key: "specialPodsOnly"
        operator: "Equal"
        value: "please"
        effect: "NoSchedule"
      containers:
        - args:
            - --path.sysfs=/host/sys
            - --path.rootfs=/host/root
            - --no-collector.wifi
            - --no-collector.hwmon
            - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
            - --collector.netclass.ignored-devices=^(veth.*)$
          name: node-exporter
          image: prom-node-exporter
          volumeMounts:
            - mountPath: /host/sys
              mountPropagation: HostToContainer
              name: sys
              readOnly: true
            - mountPath: /host/root
              mountPropagation: HostToContainer
              name: root
              readOnly: true
      volumes:
        - hostPath:
            path: /sys
          name: sys
        - hostPath:
            path: /
          name: root

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mikrotik-exporter
  labels:
    app: mikrotik-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mikrotik-exporter
  template:
    metadata:
      labels:
        app: mikrotik-exporter
      annotations:
        prometheus.io/port: "49090"
        prometheus.io/path: /metrics
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: mikrotik-exporter
          image: prom-mikrotik-exporter
          volumeMounts:
            - name: conf
              mountPath: /home/mktxp/mktxp
      volumes:
        - name: conf
          configMap:
            name: mikrotik-exporter-config
