archive/manifests/docuseal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docuseal
  labels:
    app: docuseal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: docuseal
  template:
    metadata:
      labels:
        app: docuseal
    spec:
      containers:
      - name: docuseal
        image: docuseal
        volumeMounts:
          - name: storage
            mountPath: /data
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /
            port: 3000
      volumes:
        - name: storage
          hostPath:
            path: /opt/docuseal

---

apiVersion: v1
kind: Service
metadata:
  name: docuseal
spec:
  type: ClusterIP
  selector:
      app: docuseal
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: docuseal
spec:
  virtualhost:
    fqdn: docuseal.apps.thelab.ms
    rateLimitPolicy:
      local:
        requests: 50
        unit: second
        burst: 50
    tls:
      secretName: apps-wildcard-cert
  routes:
    - conditions:
      - prefix: /
      services:
        - name: docuseal
          port: 80
