archive/manifests/homeassistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
      annotations:
        prometheus.io/port: "8123"
        prometheus.io/path: /api/prometheus
        prometheus.io/scrape: "true"
    spec:
      hostNetwork: true
      containers:
        - name: ha
          image: homeassistant
          securityContext:
            privileged: true
          volumeMounts:
            - name: media
              mountPath: /media
            - name: config
              mountPath: /config
            - name: zigbee
              mountPath: /dev/ttyACM0

      volumes:
        - name: media
          hostPath:
            path: /opt/homeassistant-media
        - name: config
          hostPath:
            path: /opt/homeassistant
        - name: zigbee
          hostPath:
            path: /dev/ttyACM0

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: ClusterIP
  selector:
    app: homeassistant
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: homeassistant
spec:
  virtualhost:
    fqdn: homeassistant.apps.thelab.ms
    rateLimitPolicy:
      local:
        requests: 50
        unit: second
        burst: 50
    tls:
      secretName: apps-wildcard-cert
  routes:
    - conditions:
        - prefix: /
      services:
        - name: homeassistant
          port: 80
      enableWebsockets: true
